Update UI and deployment files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "appService.defaultWebAppToDeploy": "/subscriptions/21de8166-9d54-4766-b94e-2880d10c865c/resourceGroups/appsvc_linux_centralus/providers/Microsoft.Web/sites/dantefinancetesting",
-    "appService.deploySubpath": "."
+    "appService.deploySubpath": ".",
+    "appService.defaultWebAppToDeploy": "/subscriptions/21de8166-9d54-4766-b94e-2880d10c865c/resourceGroups/appsvc_linux_centralus/providers/Microsoft.Web/sites/dantefinance"
 }
