--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -73,10 +75,12 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.2",
+    "gh-pages": "^3.2.3",
     "prettier": "2.3.1",
     "react-error-overlay": "^6.0.9"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
-  }
+  },
+  "homepage": "http://demian-floreani.github.io/dante-finance-gui"
 }
