--- a/package.json
+++ b/package.json
@@ -82,5 +82,5 @@
   "resolutions": {
     "react-error-overlay": "6.0.9"
   },
-  "homepage": "http://demian-floreani.github.io/dante-finance-gui"
+  "homepage": "."
 }
